Enable "STV with Droop quota" option behind feature flag
- Add STVBallot to Ballot::$ballotTypes
- Update STVBallot getCreateDescriptors() to add a seat count
- Don't show STVBallot if SecurePollSingleTransferableVoteEnabled
  flag isn't set

Bug: T282687
Change-Id: I1fe2e7b9f6c708e9088a9042db53218c6cb8ce6c

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -179,6 +179,7 @@
 	"securepoll-create-label-options-add": "Add another option",
 	"securepoll-create-label-options-delete": "Delete option",
 	"securepoll-create-label-option-name": "Option name:",
+	"securepoll-create-label-seat_count": "Number of seats:",
 	"securepoll-create-option-election_type-approval+plurality": "Approval vote",
 	"securepoll-create-option-election_type-preferential+schulze": "Schulze vote",
 	"securepoll-create-option-election_type-choose+plurality": "Plurality",
@@ -186,6 +187,7 @@
 	"securepoll-create-option-election_type-radio-range+histogram-range": "Range voting (histogram range)",
 	"securepoll-create-option-election_type-radio-range-comment+plurality": "Range voting (plurality) with comment",
 	"securepoll-create-option-election_type-radio-range-comment+histogram-range": "Range voting (histogram range) with comment",
+	"securepoll-create-option-election_type-stv+droop-quota": "Single transferable vote with Droop quota",
 	"securepoll-create-option-election_crypt-none": "No encryption",
 	"securepoll-create-option-election_crypt-gpg": "GPG",
 	"securepoll-create-label-comment": "Reason",
