--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -201,6 +201,7 @@
 	"securepoll-create-label-options-add": "Label for button on Special:SecurePoll/create.",
 	"securepoll-create-label-options-delete": "Label for button on Special:SecurePoll/create.",
 	"securepoll-create-label-option-name": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-seat_count": "Label for button on Special:SecurePoll/create.",
 	"securepoll-create-option-election_type-approval+plurality": "Label for form option on Special:SecurePoll/create.\n\nSee [[:w:en:Approval_vote|Approval vote]].",
 	"securepoll-create-option-election_type-preferential+schulze": "Label for form option on Special:SecurePoll/create.\n\nThe [[:w:en:Schulze_method|Schulze method]].",
 	"securepoll-create-option-election_type-choose+plurality": "Label for form option on Special:SecurePoll/create.",
@@ -208,6 +209,7 @@
 	"securepoll-create-option-election_type-radio-range+histogram-range": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_type-radio-range-comment+plurality": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_type-radio-range-comment+histogram-range": "Label for form option on Special:SecurePoll/create.",
+	"securepoll-create-option-election_type-stv+droop-quota": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_crypt-none": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-option-election_crypt-gpg": "{{optional}}\nLabel for form option on Special:SecurePoll/create.",
 	"securepoll-create-label-comment": "Label for the \"edit summary\" field on Special:SecurePoll/create.\n{{Identical|Reason}}",
