--- a/i18n/en.json
+++ b/i18n/en.json
@@ -270,5 +270,12 @@
 	"securepoll-log-action-type-0": "$1, $2 added $4 to the poll admins for the election <em>$3</em>.",
 	"securepoll-log-action-type-1": "$1, $2 removed $4 from the poll admins for the election <em>$3</em>.",
 	"securepoll-log-action-type-2": "$1, $2 viewed voter data for the election <em>$3</em>.",
-	"securepoll-log-empty": "No log entries found."
+	"securepoll-log-empty": "No log entries found.",
+	"securepoll-stv-droop-default-value": "Select an option",
+	"securepoll-stv-droop-choice-rank": "Preference $1",
+	"securepoll-stv-invalid-rank-empty": "At least one option must be ranked",
+	"securepoll-stv-invalid-rank-order": "Preferences must be selected in sequential order. Please pick an option for: $1",
+	"securepoll-stv-invalid-rank-duplicate": "Options cannot be selected multiple times in the ranking. Please change the option for: $1",
+	"securepoll-stv-invalid-input-empty": "Please fill out this preference",
+	"securepoll-stv-invalid-input-duplicate": "Please select a different option for this preference"
 }
