Generate STV tally output page
From the resultsLog, display a summary of elected and eliminated
candidates as well as a table showing the per-round calculations and
summaries

Bug: T284585
Change-Id: Id1f8b6a7b36567afd8c817d2896769931c26c4ab

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -277,5 +277,23 @@
 	"securepoll-stv-invalid-rank-order": "Preferences must be selected in sequential order. Please pick an option for: $1",
 	"securepoll-stv-invalid-rank-duplicate": "Options cannot be selected multiple times in the ranking. Please change the option for: $1",
 	"securepoll-stv-invalid-input-empty": "Please fill out this preference",
-	"securepoll-stv-invalid-input-duplicate": "Please select a different option for this preference"
+	"securepoll-stv-invalid-input-duplicate": "Please select a different option for this preference",
+	"securepoll-stv-result-election-elected-header": "Elected",
+	"securepoll-stv-election-paramters": "Election for $1 seats with $2 candidates. Total $3 votes.",
+	"securepoll-stv-result-elected-list-unfilled-seat": "This seat could not be filled because no candidates fulfill the criteria. The last eliminated candidates were: $1",
+	"securepoll-stv-result-election-eliminated-header": "Eliminated",
+	"securepoll-stv-result-election-rounds-header": "Rounds table",
+	"securepoll-stv-result-election-round-number-table-heading": "Round Number",
+	"securepoll-stv-result-election-tally-table-heading": "Tally",
+	"securepoll-stv-result-election-result-table-heading": "Result",
+	"securepoll-stv-result-candidate-elected": "<b>$1:</b>",
+	"securepoll-stv-result-candidate": "$1:",
+	"securepoll-stv-result-votes-gain": "$1 + $2 = $3",
+	"securepoll-stv-result-votes-surplus": "$1 - $2 = $3",
+	"securepoll-stv-result-votes-no-change": "$1",
+	"securepoll-stv-votes-transferred": "Transferring votes",
+	"securepoll-stv-result-round-quota": "Quota: $1",
+	"securepoll-stv-result-round-elected": "Elected: $1",
+	"securepoll-stv-result-round-eliminated": "Eliminated: $1",
+	"securepoll-stv-result-round-keep-factor": "(keep factor: $1)"
 }
