--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -299,5 +299,23 @@
 	"securepoll-stv-invalid-rank-order": "Used as an error message.",
 	"securepoll-stv-invalid-rank-duplicate": "Used as an error message.",
 	"securepoll-stv-invalid-input-empty": "Used as an error message.",
-	"securepoll-stv-invalid-input-duplicate": "Used as an error message."
+	"securepoll-stv-invalid-input-duplicate": "Used as an error message.",
+	"securepoll-stv-result-election-elected-header": "Header for list of elected candidates in the STV election",
+	"securepoll-stv-election-paramters": "Summary of the election parameters",
+	"securepoll-stv-result-elected-list-unfilled-seat": "Explanation for why a seat in the STV election is empty",
+	"securepoll-stv-result-election-eliminated-header": "Header for list of eliminated candidates in the STV election",
+	"securepoll-stv-result-election-rounds-header": "Header for table of round details in the STV election",
+	"securepoll-stv-result-election-round-number-table-heading": "Header for a single round in the STV election",
+	"securepoll-stv-result-election-tally-table-heading": "Header for a single round in the STV election",
+	"securepoll-stv-result-election-result-table-heading": "Header for a single round in the STV election",
+	"securepoll-stv-result-candidate-elected": "Denote if candidate is elected using b tags",
+	"securepoll-stv-result-candidate": "Candidate name",
+	"securepoll-stv-result-votes-gain": "Description of votes moving for a round in the STV election",
+	"securepoll-stv-result-votes-surplus": "Description of votes moving for a round in the STV election",
+	"securepoll-stv-result-votes-no-change": "Description of votes moving for a round in the STV election",
+	"securepoll-stv-votes-transferred": "Describes votes moving in this round in the STV election",
+	"securepoll-stv-result-round-quota": "Header for a detail in the summary of a single round in the STV election",
+	"securepoll-stv-result-round-elected": "Header for a detail in the summary of a single round in the STV election",
+	"securepoll-stv-result-round-eliminated": "Header for a detail in the summary of a single round in the STV election",
+	"securepoll-stv-result-round-keep-factor": "The keep factor associated with votes moving for a candidate in a round in the STV election"
 }
