--- a/i18n/en.json
+++ b/i18n/en.json
@@ -279,8 +279,8 @@
 	"securepoll-stv-invalid-input-empty": "Please fill out this preference",
 	"securepoll-stv-invalid-input-duplicate": "Please select a different option for this preference",
 	"securepoll-stv-result-election-elected-header": "Elected",
-	"securepoll-stv-election-paramters": "Election for $1 seats with $2 candidates. Total $3 votes.",
-	"securepoll-stv-result-elected-list-unfilled-seat": "This seat could not be filled because no candidates fulfill the criteria. The last eliminated candidates were: $1",
+	"securepoll-stv-election-paramters": "Election for $1 {{PLURAL:$1|seat|seats}} with $2 {{PLURAL:$2|candidate|candidates}}. Total $3 {{PLURAL:$3|vote|votes}}.",
+	"securepoll-stv-result-elected-list-unfilled-seat": "This seat could not be filled because no candidates fulfill the criteria. The last eliminated {{PLURAL:$1|candidate was|candidates were}}: $1",
 	"securepoll-stv-result-election-eliminated-header": "Eliminated",
 	"securepoll-stv-result-election-rounds-header": "Rounds table",
 	"securepoll-stv-result-election-round-number-table-heading": "Round Number",
