Append unelected candidates to the eliminated list
Iteration stops when all seats have been filled, regardless
of whether or not any hopeful candidates (neither elected nor
eliminated) remain. Append these candidates to the eliminated
list so that it's clear they were not elected

Bug: T287806
Change-Id: Ice06ace605398ae9d0c906cfaeba45eb22b14ed2

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -281,7 +281,7 @@
 	"securepoll-stv-result-election-elected-header": "Elected",
 	"securepoll-stv-election-paramters": "Election for $1 {{PLURAL:$1|seat|seats}} with $2 {{PLURAL:$2|candidate|candidates}}. Total $3 {{PLURAL:$3|vote|votes}}.",
 	"securepoll-stv-result-elected-list-unfilled-seat": "This seat could not be filled because no candidates fulfill the criteria. The last eliminated {{PLURAL:$1|candidate was|candidates were}}: $1",
-	"securepoll-stv-result-election-eliminated-header": "Eliminated",
+	"securepoll-stv-result-election-eliminated-header": "Eliminated/Not elected",
 	"securepoll-stv-result-election-rounds-header": "Rounds table",
 	"securepoll-stv-result-election-round-number-table-heading": "Round Number",
 	"securepoll-stv-result-election-tally-table-heading": "Tally",
