Implement archiving functionality
- Add 'Archive' link w/relevant permissions
- 'Archive' sets the 'is-archived' flag
- Archived elections aren't visible on EntryPage.php

Bug: T290179
Change-Id: I6cca6de253555418515e3b8c8c858f6883e8bb6e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -114,6 +114,13 @@
 	"securepoll-subpage-dump": "Dump",
 	"securepoll-subpage-tally": "Tally",
 	"securepoll-subpage-log": "Logs",
+	"securepoll-subpage-archive": "Archive",
+	"securepoll-archive-title": "Archive $1",
+	"securepoll-archive-private": "Sorry, only election administrators can archive/unarchive elections.",
+	"securepoll-archive-not-finished": "Sorry, you can only archive finished elections.",
+	"securepoll-archive-in-progress": "Election is currently being archived.",
+	"securepoll-archive-error": "Failed to archive election. Please try again.",
+	"securepoll-already-archived-error": "This election is already archived.",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
 	"securepoll-tally-form-file-help": "If you uploaded an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied. NOTE: Uploading an election with more than 100 votes might not give any results and lead to a timeout.",
