--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -136,6 +136,13 @@
 	"securepoll-subpage-dump": "Link text to a sub page in the SecurePoll extension where users can dump results.\n{{Identical|Dump}}",
 	"securepoll-subpage-tally": "Link text to a sub page in the SecurePoll extension where users can tally.\n{{Identical|Tally}}",
 	"securepoll-subpage-log": "Link text to the logs for a specific election in SecurePoll",
+	"securepoll-subpage-archive": "Link text to archive a finished election in SecurePoll",
+	"securepoll-archive-title": "Title of the archive page for an election",
+	"securepoll-archive-private": "Used as an error message",
+	"securepoll-archive-not-finished": "Used as an error message",
+	"securepoll-archive-in-progress": "Confirmation that an election is scheduled to be archived",
+	"securepoll-archive-error": "Used as an error message",
+	"securepoll-already-archived-error": "Used as an error message",
 	"securepoll-tally-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Tally}}",
 	"securepoll-tally-not-finished": "Used as error message.",
 	"securepoll-tally-form-file-help": "Used as help text for a form field.",
