Implement unarchiving functionality
- Abstract out common functions in pager used on /entry
  and on /archived into ElectionPager
- Rename /entry pager to MainElectionsPager
- Add ArchivedPager
- Add a link to /archived from entry page
- Archived page shows a list of archived elections
- Clicking Unarchive on an election will remove the is-archived
  flag if user has appropriate permissions

Bug: T290178
Change-Id: Id5a571f0eb2ba37c05b90a82c77b960034e3de0a

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -121,6 +121,12 @@
 	"securepoll-archive-in-progress": "Election is currently being archived.",
 	"securepoll-archive-error": "Failed to archive election. Please try again.",
 	"securepoll-already-archived-error": "This election is already archived.",
+	"securepoll-entry-archived": "View archived elections",
+	"securepoll-archived-title": "Archived elections",
+	"securepoll-subpage-unarchive": "Unarchive",
+	"securepoll-unarchive-title": "Unarchive $1",
+	"securepoll-unarchive-in-progress": "Election is currently being unarchived.",
+	"securepoll-already-unarchived-error": "This election is not archived.",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
 	"securepoll-tally-form-file-help": "If you uploaded an encrypted dump, its contents will be tallied. Otherwise the results in the database will be tallied. NOTE: Uploading an election with more than 100 votes might not give any results and lead to a timeout.",
