--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -143,6 +143,12 @@
 	"securepoll-archive-in-progress": "Confirmation that an election is scheduled to be archived",
 	"securepoll-archive-error": "Used as an error message",
 	"securepoll-already-archived-error": "Used as an error message",
+	"securepoll-entry-archived": "Link to a list of archived elections",
+	"securepoll-archived-title": "Title of the page of archived elections",
+	"securepoll-subpage-unarchive": "Link text to a sub page in SecurePoll where users can unarchive the election",
+	"securepoll-unarchive-title": "Title of the unarchive page for an election",
+	"securepoll-unarchive-in-progress": "Confirmation that an election is being unarchived",
+	"securepoll-already-unarchived-error": "Used as an error message",
 	"securepoll-tally-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Tally}}",
 	"securepoll-tally-not-finished": "Used as error message.",
 	"securepoll-tally-form-file-help": "Used as help text for a form field.",
