i18n: Changing 'Dup' to 'Duplicate' and 'Duplicate' to 'Dup cookies' to clarify
Bug: T294061
Change-Id: I85e7aa314b49c3fb61f9c64efcd3baf36ca59173

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -63,10 +63,10 @@
 	"securepoll-header-xff": "XFF",
 	"securepoll-header-ua": "User agent",
 	"securepoll-header-token-match": "CSRF",
-	"securepoll-header-cookie-dup": "Dup",
+	"securepoll-header-cookie-dup": "Duplicate",
 	"securepoll-header-strike": "Strike",
 	"securepoll-header-details": "Details",
-	"securepoll-vote-duplicate": "Duplicate",
+	"securepoll-vote-duplicate": "Dup cookies",
 	"securepoll-vote-csrf": "Failed",
 	"securepoll-strike-button": "Strike",
 	"securepoll-unstrike-button": "Unstrike",
