Fully add new securepoll-view-voter-pii right
Follow-Up: Ic7510be487a1bf9215de9ae6cf4a26fad96384c9
Bug: T290808
Change-Id: Ib2715adb281f8892b586dcb1895e87ac0eb548b0
(cherry picked from commit 3191169d7dc0de086a1cbfb18823b52884dc2070)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -250,6 +250,8 @@
 	"securepoll-votereligibility-cleared-comment": "$1 cleared.",
 	"right-securepoll-create-poll": "Create polls",
 	"action-securepoll-create-poll": "create polls and view logs",
+	"right-securepoll-view-voter-pii": "Access personally-identifying information about voters",
+	"action-securepoll-view-voter-pii": "access personally-identifying information about voters",
 	"securepoll-ns-readonly": "The {{ns:SecurePoll}} namespace is read-only",
 	"securepoll-voter-stats": "Out of all eligible voters, $1 {{PLURAL:$1|voter has|voters have}} voted.",
 	"securepoll-vote-stats": "A total of $1 {{PLURAL:$1|vote has|votes have}} been cast. Of these, $2 {{PLURAL:$2|is|are}} thrown away because the voter has voted again, and $3 {{PLURAL:$3|is|are}} struck.",
