Allowed to specify time on Special:SecurePoll/create & edit
Replaced DateInputWidget with DateTimeInputWidged for start date,
replaced duration select with an end date DateTimeInputWidget
in CreatePage.php, removed hardcoded 00:00:00 from FormStore

Bug: T301046
Change-Id: I1be86765c50a28412f29abeb0cdacab713af47ba

--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -169,6 +169,7 @@
 	"securepoll-create-option-wiki-other_wiki": "Інша конкретна вікі",
 	"securepoll-create-label-election_primarylang": "Основна мова:",
 	"securepoll-create-label-election_startdate": "Дата початку виборів:",
+	"securepoll-create-label-election_enddate": "Дата завершення виборів:",
 	"securepoll-create-label-election_duration": "Тривалість виборів (днів):",
 	"securepoll-create-label-election_disallow-change": "Заборонити виборцям змінювати свої голоси",
 	"securepoll-create-label-election_return-url": "URL-адреса повернення:",
