--- a/i18n/en.json
+++ b/i18n/en.json
@@ -160,6 +160,7 @@
 	"securepoll-create-option-wiki-other_wiki": "Other specific wiki",
 	"securepoll-create-label-election_primarylang": "Primary Language:",
 	"securepoll-create-label-election_startdate": "Election Start Date:",
+	"securepoll-create-label-election_enddate": "Election End Date:",
 	"securepoll-create-label-election_duration": "Election Duration (Days):",
 	"securepoll-create-label-election_disallow-change": "Prevent voters from changing their votes",
 	"securepoll-create-label-election_return-url": "Return-to URL:",
