--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -183,6 +183,7 @@
 	"securepoll-create-option-wiki-other_wiki": "Label for form option on Special:SecurePoll/create.",
 	"securepoll-create-label-election_primarylang": "Label for form field on Special:SecurePoll/create.\n{{Identical|Primary language}}",
 	"securepoll-create-label-election_startdate": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-election_enddate": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-election_duration": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-election_disallow-change": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-election_return-url": "Label for form field on Special:SecurePoll/create.",
