Add optional comment box to the end of the vote form
* Add an optional comment box to the end of the vote form. This is an
  election property and works regardless of ballot type.
* Change the storage format for the vote_record field. Now it is a JSON
  object, wrapping the old ballot-specific vote records, and also now
  the optional comment.
* Stop adding a line break at the end of the ballot record in the
  database. Add a line break in the dump CLI/UI instead.
* Old records are supported for tallying, with b/c code in VoteRecord.
* Add a create UI for the comment box and optional introductory text.
* Add a tally UI, showing comments at the end of the tally.
* Archive the old RadioRangeCommentBallot type. It is still valid for
  tallying but cannot be used for voting.
* To derive a list of valid ballot types, instead of modifying a static
  variable in CreatePage, move that feature to Context. But FormStore
  needs this information and is a dependency for Context, so move form
  data initialisation out of the FormStore constructor to avoid a
  dependency loop.

Bug: T300087
Bug: T300088
Change-Id: I70dadf2a0c6ff8a258eaf8b759991e1d6d965835

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -41,6 +41,7 @@
 	"securepoll-not-qualified": "Unused at this time. Parameters:\n* $1 - ...",
 	"securepoll-change-disallowed": "Used as error message.",
 	"securepoll-change-allowed": "Used as error message.",
+	"securepoll-header-comments": "Fieldset header for the comments text area on the vote page.",
 	"securepoll-submit": "{{Identical|Submit}}",
 	"securepoll-gpg-receipt": "Parameters:\n* $1 - the receipt. Format: \n<pre>\nSPID: (10-digit vote ID)\n(encrypted vote record)\n</pre>\nIf the election doesn't use encryption, the following message is used:\n* {{msg-mw|securepoll-thanks}}",
 	"securepoll-thanks": "If the election use encryption, the following message is used:\n* {{msg-mw|Securepoll-gpg-receipt}}",
@@ -52,7 +53,9 @@
 	"securepoll-gpg-config-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].",
 	"securepoll-gpg-parse-error": "GPG stands for [[w:GNU_Privacy_Guard|GNU Privacy Guard]].",
 	"securepoll-no-decryption-key": "Used as error message.",
+	"securepoll-invalid-record": "Used as errror message.",
 	"securepoll-jump": "Label of the button than sends the user to the voting wiki.",
+	"securepoll-ballot-type-archived": "Used as error message.",
 	"securepoll-bad-ballot-submission": "Unused at this time. Parameters:\n* $1 - ...",
 	"securepoll-ballot-see-error": "Button shown when the ballot has an error. Clicking it takes the user to the input that is invalid.",
 	"securepoll-unanswered-questions": "Used as error message.",
@@ -163,6 +166,7 @@
 	"securepoll-tally-upload-error": "Used as error message. Parameters:\n* $1 - error message",
 	"securepoll-tally-result-error": "Used as error message. Parameters:\n* $1 - error message",
 	"securepoll-tally-result": "Used in tally page if a tally has already been done. Parameters:\n* $1 - existing tally results\n* $2 - time the results were tallied",
+	"securepoll-tally-comments": "Section header in tally results.",
 	"securepoll-pairwise-victories": "Used as section header.",
 	"securepoll-strength-matrix": "Used as section header.",
 	"securepoll-ranks": "Used as section header.",
@@ -196,6 +200,8 @@
 	"securepoll-create-label-must_rank_all": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-must_answer_all": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-voter_privacy": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-request-comment": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-comment-prompt": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-gpg_encrypt_key": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-gpg_sign_key": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-questions": "Label for \"Questions\" section on Special:SecurePoll/create.\n{{Identical|Question}}",
