--- a/i18n/en.json
+++ b/i18n/en.json
@@ -18,6 +18,7 @@
 	"securepoll-not-qualified": "You are not qualified to vote in this election: $1",
 	"securepoll-change-disallowed": "You have voted in this election before.\nSorry, you may not vote again.",
 	"securepoll-change-allowed": "<strong>Note: You have voted in this election before.</strong>\nYou may change your vote by submitting the form below.\nNote that if you do this, your original vote will be discarded.",
+	"securepoll-header-comments": "Comments",
 	"securepoll-submit": "Submit vote",
 	"securepoll-gpg-receipt": "Thank you for voting.\n\nIf you wish, you may retain the following receipt as evidence of your vote:\n\n<pre>$1</pre>",
 	"securepoll-thanks": "Thank you, your vote has been recorded.",
@@ -29,7 +30,9 @@
 	"securepoll-gpg-config-error": "GPG keys are configured incorrectly.",
 	"securepoll-gpg-parse-error": "Error interpreting GPG output.",
 	"securepoll-no-decryption-key": "No decryption key is configured.\nCannot decrypt.",
+	"securepoll-invalid-record": "Invalid voting record.",
 	"securepoll-jump": "Go to the voting server",
+	"securepoll-ballot-type-archived": "This ballot type has been archived and can no longer be used for voting.",
 	"securepoll-bad-ballot-submission": "Your vote was invalid: $1",
 	"securepoll-ballot-see-error": "See this warning",
 	"securepoll-unanswered-questions": "You must answer all questions.",
@@ -140,6 +143,7 @@
 	"securepoll-tally-upload-error": "Error tallying dump file: $1",
 	"securepoll-tally-result-error": "Tally failed with error: $1",
 	"securepoll-tally-result": "<h2>Previous results</h2><p>$1</p><p>(Results from $2)</p>",
+	"securepoll-tally-comments": "Voter comments",
 	"securepoll-pairwise-victories": "Pairwise victory matrix",
 	"securepoll-strength-matrix": "Path strength matrix",
 	"securepoll-ranks": "Final ranking",
@@ -173,6 +177,8 @@
 	"securepoll-create-label-must_rank_all": "Require that all options be ranked.",
 	"securepoll-create-label-must_answer_all": "Require that all options be answered.",
 	"securepoll-create-label-voter_privacy": "Disable transparency features (e.g. voter list) to protect voter privacy",
+	"securepoll-create-label-request-comment": "Request free text comments at the end of the ballot",
+	"securepoll-create-label-comment-prompt": "Prompt text for comments:",
 	"securepoll-create-label-gpg_encrypt_key": "GPG encryption key",
 	"securepoll-create-label-gpg_sign_key": "GPG signing key",
 	"securepoll-create-label-questions": "== Questions ==",
