STVBallot: Add limit option for seats
Add checkbox to limit the number of dropdownsto thenumber
of seats.

Bug: T304930
Change-Id: I4d540565dd36d89b1ffd03a01a91cc988a51e269

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -199,6 +199,7 @@
 	"securepoll-create-label-options-delete": "Delete option",
 	"securepoll-create-label-option-name": "Option name:",
 	"securepoll-create-label-seat_count": "Number of seats:",
+	"securepoll-create-label-limit-seats_input": "Limit input to number of seats",
 	"securepoll-create-option-election_type-approval+plurality": "Approval vote",
 	"securepoll-create-option-election_type-preferential+schulze": "Schulze vote",
 	"securepoll-create-option-election_type-choose+plurality": "Plurality",
