Create a drag-drop solution for ranked choice voting
Bug: T289388
Change-Id: If549f7a540b2af86bcd5b97305c9f2b8894f6477

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -355,5 +355,6 @@
 	"securepoll-vote-result-not-checked-option-label": "$1: not checked",
 	"securepoll-vote-result-checked-option-label": "$1: checked",
 	"securepoll-vote-result-comment": "Comment: $1",
-	"securepoll-vote-result-error-label": "Your votes could not be unpacked correctly. Please contact an election administrator"
+	"securepoll-vote-result-error-label": "Your votes could not be unpacked correctly. Please contact an election administrator",
+	"securepoll-vote-stv-clear-btn-label": "Clear all candidates"
 }
