--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -342,5 +342,22 @@
 	"securepoll-stv-result-round-quota": "Header for a detail in the summary of a single round in the STV election",
 	"securepoll-stv-result-round-elected": "Header for a detail in the summary of a single round in the STV election",
 	"securepoll-stv-result-round-eliminated": "Header for a detail in the summary of a single round in the STV election",
-	"securepoll-stv-result-round-keep-factor": "The keep factor associated with votes moving for a candidate in a round in the STV election"
+	"securepoll-stv-result-round-keep-factor": "The keep factor associated with votes moving for a candidate in a round in the STV election",
+	"securepoll-subpage-translate-info": "Description on translate page with options how content can be translated",
+	"securepoll-translate-import-button-label": "Label on button to open import translation dialog",
+	"securepoll-translation-importer-no-content": "Used as an error message",
+	"securepoll-translation-importer-update-start": "Used as an update message during import process\nParameters:\n* $1 - page title\n",
+	"securepoll-translation-importer-update-parsed-content": "Used as an update message during import process\nParameters:\n* $1 - page language\n",
+	"securepoll-translation-importer-no-selected-language": "Used as an error message",
+	"securepoll-translation-result-error-title": "Label for errors tab header on result page after import translation",
+	"securepoll-translation-result-error-text": "Label in error tab on result page after import translation",
+	"securepoll-translation-result-import-pages-title": "Label for imported pages tab header on result page after import translation",
+	"securepoll-translation-result-import-pages-text": "Label in imported pages tab on result page after import translation",
+	"securepoll-translation-result-description": "Imported translations from",
+	"securepoll-translation-import-start": "Used as an update message during import process",
+	"securepoll-translation-select-import-source": "Label for input field in import dialog\nParameters:\n* $1 - page title\n",
+	"securepoll-translation-import-dialog-title": "Title for translations dialog",
+	"securepoll-translation-import-action-import": "Label for action import in translation dialog",
+	"securepoll-translation-import-action-done": "Label for action done in translation dialog",
+	"securepoll-translation-error-no-page-title": "Used as an error message"
 }
