--- a/i18n/en.json
+++ b/i18n/en.json
@@ -20,7 +20,7 @@
 	"securepoll-change-allowed": "<strong>Note: You have voted in this election before.</strong>\nYou may change your vote by submitting the form below.\nNote that if you do this, your original vote will be discarded.",
 	"securepoll-header-comments": "Comments",
 	"securepoll-submit": "Submit vote",
-	"securepoll-gpg-receipt": "Thank you for voting.\n\nIf you wish, you may retain the following receipt as evidence of your vote:\n\n<pre>$1</pre>",
+	"securepoll-gpg-receipt": "If you wish, you may retain the following receipt as evidence of your vote:\n\n<pre>$1</pre>",
 	"securepoll-thanks": "Thank you, your vote has been recorded.",
 	"securepoll-return": "Return to $1",
 	"securepoll-encrypt-error": "Failed to encrypt your vote record.\nYour vote has not been recorded!\n\n$1",
@@ -335,5 +335,14 @@
 	"securepoll-translation-import-dialog-title": "Import translations",
 	"securepoll-translation-import-action-import": "Import",
 	"securepoll-translation-import-action-done": "Done",
-	"securepoll-translation-error-no-page-title": "No page title found"
+	"securepoll-translation-error-no-page-title": "No page title found",
+	"securepoll-vote-result-intro-label": "Summary of your vote",
+	"securepoll-vote-result-question-label": "Question: $1",
+	"securepoll-vote-result-rated-option-label": "$1: rated $2",
+	"securepoll-vote-result-voted-option-label": "$1: $2",
+	"securepoll-vote-result-not-voted-option-label": "$1: not voted",
+	"securepoll-vote-result-not-checked-option-label": "$1: not checked",
+	"securepoll-vote-result-checked-option-label": "$1: checked",
+	"securepoll-vote-result-comment": "Comment: $1",
+	"securepoll-vote-result-error-label": "Your votes could not be unpacked correctly. Please contact an election administrator"
 }
