Use MessageWidget for errors on VotePage
OOUI/MessageWidget replacing plain text

Bug: T279570
Change-Id: I7c1509bf71b8d05bc02f34574196d401d286fcb9

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -34,7 +34,8 @@
 	"securepoll-jump": "Go to the voting server",
 	"securepoll-ballot-type-archived": "This ballot type has been archived and can no longer be used for voting.",
 	"securepoll-bad-ballot-submission": "Your vote was invalid: $1",
-	"securepoll-ballot-see-error": "See this warning",
+	"securepoll-ballot-show-warnings": "Show only warnings",
+	"securepoll-ballot-show-all": "Show all",
 	"securepoll-unanswered-questions": "You must answer all questions.",
 	"securepoll-invalid-rank": "Invalid rank. You must give candidates a rank between 1 and 999.",
 	"securepoll-unranked-options": "Some options were not ranked.\nYou must give all options a rank between 1 and 999.",
