--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -59,7 +59,8 @@
 	"securepoll-jump": "Label of the button than sends the user to the voting wiki.",
 	"securepoll-ballot-type-archived": "Used as error message.",
 	"securepoll-bad-ballot-submission": "Unused at this time. Parameters:\n* $1 - ...",
-	"securepoll-ballot-see-error": "Button shown when the ballot has an error. Clicking it takes the user to the input that is invalid.",
+	"securepoll-ballot-show-warnings": "Button show fields with an error. Clicking it hides all fieldsets and rows where errors not occure.",
+	"securepoll-ballot-show-all": "Button show all fields. Clicking it shows all fieldsets and rows regardless of whether the error appears on them.",
 	"securepoll-unanswered-questions": "Used as error message.",
 	"securepoll-invalid-rank": "Used as error message.",
 	"securepoll-unranked-options": "Used as error message.",
