Improve a recently added message
The words "jump election" look wrong. It probably should
say "jump to the election".

Follow-up to
I42a2f15a630804c55578ce94835a9bc785058b76

Bug: T204193
Change-Id: I48ce05ba58cdd0a38a3a002f936faf0f56b1e5b5

--- a/i18n/api/en.json
+++ b/i18n/api/en.json
@@ -14,7 +14,7 @@
 	"apihelp-strikevote-example-unstrike": "Unstrike vote <kbd>1</kbd>, giving the reason <kbd>mistake</kbd>.",
 	"apierror-securepoll-mustbeloggedin-strikevote": "You must be logged in to strike or unstrike a vote.",
 	"apierror-securepoll-badvoteid": "<kbd>$1</kbd> is not a valid vote id.",
-	"apihelp-securepollauth-summary": "Allows remote wiki to authenticate users before granting access to jump election.",
+	"apihelp-securepollauth-summary": "Allows a remote wiki to authenticate users before granting access to vote in the election.",
 	"apihelp-securepollauth-param-token": "A token based on the user's login token.",
 	"apihelp-securepollauth-param-id": "The ID of the user who intends to vote.",
 	"apihelp-securepollauth-example-auth": "Authenticate user with ID <kbd>1</kbd>, and login token <kbd>123ABC</kbd>."
